# baseconv

./: .gitignore  Dockerfile  README.md  baseconv.c  baseconv.h  bcrepl.c  bcvrepl.c  bcvrepl.h  build_context.sh  main.c  meson.build
.github/workflows/: codeql.yml  greetings.yml
context/: build_context.sh
context/etc/bash/bashrc.d/: bashrc.sh
context/usr/lib/: ld-linux-x86-64.so.2  libbcv.so.0.0.1  libcap.so.2.51
doc/manpage/: bcv.1  bcv.fr.1
doc/manpage/fr/: bcv.1
python-support/: README.md  build.sh
python-support/example/: main.py
python-support/pybcv/: bcv.pxd  bcv.pyx  meson.building  requirements.txt  setup.py
src/: baseconv.c  baseconv.h  bcvrepl.c  bcvrepl.h
